| Summary: | ASTERISK-25894: [patch] webrtc video broken due to missing marker bits in RTP streams | ||
| Reporter: | Jacek Konieczny (jkonieczny) | Labels: | |
| Date Opened: | 2016-04-06 06:48:41 | Date Closed: | 2016-04-06 15:34:12 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Core/General |
| Versions: | 13.8.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | WebRTC Video calls to app_echo work for me, but calls to other PJSIP endpoints do not – the browser is not able to decode the video. Video sent by the browser is properly decoded on the other side (linphone).
I found out, that my Firefox cannot decode video due to cleared 'Marker' bit in incoming RTP packets (marker should be set on the last packet of each frame). This seem similar to ASTERISK-25451, -but seems to affect WebRTC/SRTP/DTLS media only-. I will try to investigate this further. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2016-04-06 06:48:41.767-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Jacek Konieczny (jkonieczny) 2016-04-06 08:20:10.901-0500 I found the problem. It seems ASTERISK-25451 has not been really fixed. The problem is {{ast_frdup()}} does not copy whole {{frame.subclass}} for voice, video and image frames, only the format is copied. For video frames, the subclass structure contains the {{.frame_ending}} flag used to put the RTP marker where it needs to be. I have prepared the simplest patch to fix the problem: https://gerrit.asterisk.org/#/c/2538/, though this could be fixed in a more generic way (properly copy whole {{.subclass}} for every frame type) or in a more specific way (handle {{.frame_ending}} only for video frames). By: Richard Mudgett (rmudgett) 2016-04-06 11:19:38.898-0500 [~jkonieczny] I opted to make the patch copy the whole subclass as you mentioned. The subclass used to be a union. | ||